src/app/navigation/navigation-bar/navigation-bar.component.css
/* || Navigation Bar */

/* || Navigation Bar - Common */

:host {
  display: flex;
  position: fixed;
  z-index: 2;
  scrollbar-width: none;
  /* Firefox */
  -ms-overflow-style: none;
  /* IE and Edge */
  width: 100%;
  bottom: 0;
  justify-content: space-evenly;
  min-height: 64px;
  box-shadow: var(--elevation-level-2);
  background-color: var(--md-sys-color-surface-container);
  transform: translateY(0);
  transition: transform 0.5s ease;
  padding-bottom: env(safe-area-inset-bottom)
}

:host::-webkit-scrollbar {
  display: none;
  /* WebKit browsers */
}

:host(.navigation-bar--hidden) {
  box-shadow: none;
  transform: translateY(100%);
}

.navigation-bar__item {
  display: flex;
  justify-content: center;
  align-items: center;
  background: none;
  cursor: pointer;
  color: var(--md-sys-color-on-surface-variant);
}

.navigation-bar__item-label-text {
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
  letter-spacing: 0.5px;
}

.navigation-bar__item-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

.navigation-bar__item--active .navigation-bar__item-icon {
  font-variation-settings:
    'FILL' 1;
}

/* || Navigation Bar - Vertical items - For compact window class */

@media (max-width: 599px) {

  :host {
    padding-top: 6px;
  }

  .navigation-bar__item {
    height: 52px;
    flex-direction: column;
  }

  .navigation-bar__item-label-text {
    margin-top: 4px;
  }

  .navigation-bar__item--active .navigation-bar__item-label-text {
    color: var(--md-sys-color-secondary);
  }

  .navigation-bar__item-icon {
    height: 32px;
    width: 56px;
    border-radius: var(--md-sys-shape-corner-full);
  }

  .navigation-bar__item--active .navigation-bar__item-icon {
    background-color: var(--md-sys-color-secondary-container);
    color: var(--md-sys-color-on-secondary-container);
  }

  @media (hover:none) {
    .navigation-bar__item-icon {
      transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
    }

    .navigation-bar__item-label-text {
      transition: color 250ms ease-in-out;
    }

    .navigation-bar__item:not(.navigation-bar__item--active):active .navigation-bar__item-icon {
      background-color: var(--md-sys-color-on-secondary-container);
      color: var(--md-sys-color-inverse-on-surface);
      transition: none;
    }

    .navigation-bar__item:not(.navigation-bar__item--active):active .navigation-bar__item-label-text {
      color: var(--md-sys-color-on-surface);
      transition: none;
    }
  }

  @media (hover:hover) {
    .navigation-bar__item-icon {
      transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
    }

    .navigation-bar__item-label-text {
      transition: color 250ms ease-in-out;
    }

    .navigation-bar__item:not(.navigation-bar__item--active):hover .navigation-bar__item-icon {
      background-color: var(--md-sys-color-on-secondary-container);
      color: var(--md-sys-color-inverse-on-surface);
    }

    .navigation-bar__item:not(.navigation-bar__item--active):hover .navigation-bar__item-label-text {
      color: var(--md-sys-color-on-surface);
    }

    .navigation-bar__item:not(.navigation-bar__item--active):active .navigation-bar__item-icon {
      background-color: var(--md-sys-color-surface);
      color: var(--md-sys-color-on-surface);
      transition: none;
    }

    .navigation-bar__item:not(.navigation-bar__item--active):active .navigation-bar__item-label-text {
      color: var(--md-sys-color-on-surface);
      transition: none;
    }
  }
}

/* || Navigation Bar - Horizontal items - For medium window class */

@media (min-width: 600px) and (max-width: 839px) {

  :host {
    padding-top: 12px;
  }


  .navigation-bar__item {
    height: 40px;
    padding-left: 16px;
    padding-right: 16px;
    gap: 4px;
    border-radius: var(--md-sys-shape-corner-full);

  }

  .navigation-bar__item--active {
    background-color: var(--md-sys-color-secondary-container);
    color: var(--md-sys-color-on-secondary-container);
  }

  .navigation-bar__item-icon {
    height: 32px;
  }

  @media (hover:none) {
    .navigation-bar__item {
      transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
    }

    .navigation-bar__item:not(.navigation-bar__item--active):active {
      background-color: var(--md-sys-color-on-secondary-container);
      color: var(--md-sys-color-inverse-on-surface);
      transition: none;
    }
  }

  @media (hover:hover) {
    .navigation-bar__item {
      transition: background-color 250ms ease-in-out, color 250ms ease-in-out;
    }

    .navigation-bar__item:not(.navigation-bar__item--active):hover {
      background-color: var(--md-sys-color-on-secondary-container);
      color: var(--md-sys-color-inverse-on-surface);
    }

    .navigation-bar__item:not(.navigation-bar__item--active):active {
      background-color: var(--md-sys-color-surface);
      color: var(--md-sys-color-on-surface);
      transition: none;
    }
  }
}

/* || Navigation Bar - For expanded, large and extra-large window classes */

@media (min-width: 840px) {
  :host {
    display: none;
  }
}

